[gd_scene load_steps=5 format=2]

[ext_resource path="res://Gamemenu/Endmenu.gd" type="Script" id=1]
[ext_resource path="res://Gamemenu/font/Adventurer.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="Endmenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -267.0
margin_top = 186.0
margin_right = 230.0
margin_bottom = 281.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 497.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "Restart"
flat = true

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 497.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
flat = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Name" type="TextEdit" parent="."]
anchor_bottom = 0.046
margin_left = 254.0
margin_top = 78.0
margin_right = 751.0
margin_bottom = 78.0

[node name="Save" type="Button" parent="."]
margin_left = 256.0
margin_top = 129.0
margin_right = 496.0
margin_bottom = 149.0
text = "SAVE"

[node name="Update" type="Button" parent="."]
margin_left = 505.0
margin_top = 129.0
margin_right = 751.0
margin_bottom = 149.0
text = "UPDATE"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_down" from="Save" to="." method="_on_Save_button_down"]
[connection signal="button_down" from="Update" to="." method="_on_Update_button_down"]
